Fix an issue where the iPhone frame's height got stretched on Firefox

--- a/desktop/apps/gallery_partnerships2/stylesheets/index.styl
+++ b/desktop/apps/gallery_partnerships2/stylesheets/index.styl
@@ -202,6 +202,7 @@ background-size-cover()
   &__image
     width 100%
     max-width 410px
+    max-height 515px
     @media screen and (max-width: 960px)
       max-width 318px
     @media screen and (max-width: 768px)
